--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
     <head>
         <title>Ta te ti!</title>
         <script src="./game.js"></script>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <h1>Ta Te Ti!</h1>
         <div id="menu">
-            <p>Jugador 1 <input type="text"></p>
-            <p>Jugador 2 <input type="text"></p>
-            <input type="submit" value="Jugar!" onclick="game.start();">
+            <script>
+                playersManager = new PlayersManager();
+            </script>
+            <p>Jugador 1 <input type="text" id="player1Name"></p>
+            <p>Jugador 2 <input type="text" id="player2Name"></p>
+            <input type="submit" value="Jugar!" onclick="playersManager.addPlayers();game.start();">
         </div>
 
         <div id="game">
@@ -32,11 +36,11 @@
                     <td><button>#</button></td>
                 </tr>
             </table>
-            <p><button>Rendirse</button>    </p>
+            <p><button>Rendirse</button></p>
         </div>
     </body>
     <script>
-        game = new Game();
+        game = new Game(playersManager);
         game.loadMenu();
     </script>
 </html>
