Bck image and minimal refactor

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <td><button onclick="game.drawSymbol(2,2);">9</button></td>
                 </tr>
             </table>
-            <p><button>Rendirse</button></p>
+            <p><button onclick="game.giveUp();">Rendirse</button></p>
         </div>
     </body>
     <script>
