--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Ta te ti!</title>
-        <script src="./game.js"></script>
+        <script src="./js/game.js"></script>
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
