--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <h1>Ta Te Ti!</h1>
-        <div id="menu">
+        <h1 class="header">Ta Te Ti!</h1>
+        <div id="menu" class="menu">
             <p>Jugador 1 <input type="text" id="player1Name"></p>
             <p>Jugador 2 <input type="text" id="player2Name"></p>
             <input type="submit" value="Jugar!" onclick="game.playersManager.addPlayers();game.start();">
         </div>
 
-        <div id="game">
+        <div id="game" class="game-div">
             <p id="timer">Timer: </p>
             <p id="turn-txt">Turno de jugador: </p>
             <table id="board" class="game-board">
