--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
             <p>Jugador 1 <input type="text" id="player1Name"></p>
             <p>Jugador 2 <input type="text" id="player2Name"></p>
             <input type="submit" value="Jugar!" onclick="game.playersManager.addPlayers();game.start();">
+            <h2>Leaderboard</h2>
+            <table id="leaderboard">
+                <tr>
+                    <th>Jugador 1</th>
+                    <th>Jugador 2</th>
+                    <th>Ganador</th>
+                </tr>
+            </table>
+            <script>generateLeaderBoardTable();</script>
         </div>
 
         <div id="game" class="game-div">
