--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
         <title>Ta te ti!</title>
         <script src="./js/game.js"></script>
         <link rel="stylesheet" href="./styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1-.0">
     </head>
     <body>
         <h1 class="header">Ta Te Ti!</h1>
         <div id="menu" class="menu">
-            <p>Jugador 1 <input type="text" id="player1Name"></p>
-            <p>Jugador 2 <input type="text" id="player2Name"></p>
-            <input type="submit" value="Jugar!" onclick="game.playersManager.addPlayers();game.start();">
+            <div class="game-start-menu">
+                <p>Jugador 1 <input type="text" id="player1Name"></p>
+                <p>Jugador 2 <input type="text" id="player2Name"></p>
+                <input type="submit" value="Jugar!" onclick="game.playersManager.addPlayers();game.start();">
+            </div>
             <h2>Leaderboard</h2>
-            <table id="leaderboard">
+            <table id="leaderboard" class="leaderboard">
             </table>
         </div>
 
@@ -21,19 +24,19 @@
             <p id="turn-txt">Turno de jugador: </p>
             <table id="board" class="game-board">
                 <tr>
-                    <td><button onclick="game.drawSymbol(0,0);"></button></td>
-                    <td><button onclick="game.drawSymbol(0,1);"></button></td>
-                    <td><button onclick="game.drawSymbol(0,2);"></button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(0,0);">ㅤ</button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(0,1);">ㅤ</button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(0,2);">ㅤ</button></td>
                 </tr>
                 <tr>
-                    <td><button onclick="game.drawSymbol(1,0);"></button></td>
-                    <td><button onclick="game.drawSymbol(1,1);"></button></td>
-                    <td><button onclick="game.drawSymbol(1,2);"></button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(1,0);">ㅤ</button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(1,1);">ㅤ</button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(1,2);">ㅤ</button></td>
                 </tr>
                 <tr>
-                    <td><button onclick="game.drawSymbol(2,0);"></button></td>
-                    <td><button onclick="game.drawSymbol(2,1);"></button></td>
-                    <td><button onclick="game.drawSymbol(2,2);"></button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(2,0);">ㅤ</button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(2,1);">ㅤ</button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(2,2);">ㅤ</button></td>
                 </tr>
             </table>
             <p><button onclick="game.giveUp();">Rendirse</button></p>
