--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
         <h1 class="header">Ta Te Ti!</h1>
         <div id="menu" class="menu">
             <div class="game-start-menu">
-                <p>Jugador 1 <input type="text" id="player1Name"></p>
-                <p>Jugador 2 <input type="text" id="player2Name"></p>
-                <input type="submit" value="Jugar!" onclick="game.playersManager.addPlayers();game.start();">
+                <p class="player-name">Jugador 1 <input type="text" id="player1Name"></p>
+                <p class="player-name">Jugador 2 <input type="text" id="player2Name"></p>
+                <!-- <input type="submit" class="start-button" value="Jugar!" onclick="game.playersManager.addPlayers();game.start();"> -->
+                <button class="start-button" onclick="game.playersManager.addPlayers();game.start();">
+                    Nueva partida
+                </button>
             </div>
-            <h2>Leaderboard</h2>
+            <h2 class="header">Leaderboard</h2>
             <table id="leaderboard" class="leaderboard">
             </table>
         </div>
@@ -24,19 +27,19 @@
             <p id="turn-txt">Turno de jugador: </p>
             <table id="board" class="game-board">
                 <tr>
-                    <td><button class="board-button" onclick="game.drawSymbol(0,0);">ㅤ</button></td>
-                    <td><button class="board-button" onclick="game.drawSymbol(0,1);">ㅤ</button></td>
-                    <td><button class="board-button" onclick="game.drawSymbol(0,2);">ㅤ</button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(0,0);"></button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(0,1);"></button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(0,2);"></button></td>
                 </tr>
                 <tr>
-                    <td><button class="board-button" onclick="game.drawSymbol(1,0);">ㅤ</button></td>
-                    <td><button class="board-button" onclick="game.drawSymbol(1,1);">ㅤ</button></td>
-                    <td><button class="board-button" onclick="game.drawSymbol(1,2);">ㅤ</button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(1,0);"></button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(1,1);"></button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(1,2);"></button></td>
                 </tr>
                 <tr>
-                    <td><button class="board-button" onclick="game.drawSymbol(2,0);">ㅤ</button></td>
-                    <td><button class="board-button" onclick="game.drawSymbol(2,1);">ㅤ</button></td>
-                    <td><button class="board-button" onclick="game.drawSymbol(2,2);">ㅤ</button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(2,0);"></button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(2,1);"></button></td>
+                    <td><button class="board-button" onclick="game.drawSymbol(2,2);"></button></td>
                 </tr>
             </table>
             <p><button onclick="game.giveUp();">Rendirse</button></p>
