Menu styles done

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h1 class="header">Ta Te Ti!</h1>
         <div id="menu" class="menu">
             <div class="game-start-menu">
-                <p class="player-name">Jugador 1 <input type="text" id="player1Name"></p>
-                <p class="player-name">Jugador 2 <input type="text" id="player2Name"></p>
+                <p class="player-name">Jugador 1 <input type="text" id="player1Name" class="player-input"></p>
+                <p class="player-name">Jugador 2 <input type="text" id="player2Name" class="player-input"></p>
                 <!-- <input type="submit" class="start-button" value="Jugar!" onclick="game.playersManager.addPlayers();game.start();"> -->
                 <button class="start-button" onclick="game.playersManager.addPlayers();game.start();">
                     Nueva partida
