Added style for game screen

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     Nueva partida
                 </button>
             </div>
-            <h2 class="header">Leaderboard</h2>
+            <h2 class="header">Marcas</h2>
             <table id="leaderboard" class="leaderboard">
             </table>
         </div>
