--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Ta te ti!</title>
         <script src="./js/game.js"></script>
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="./styles/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1-.0">
     </head>
     <body>
@@ -12,8 +12,7 @@
             <div class="game-start-menu">
                 <p class="player-name">Jugador 1 <input type="text" id="player1Name" class="player-input"></p>
                 <p class="player-name">Jugador 2 <input type="text" id="player2Name" class="player-input"></p>
-                <!-- <input type="submit" class="start-button" value="Jugar!" onclick="game.playersManager.addPlayers();game.start();"> -->
-                <button class="start-button" onclick="game.playersManager.addPlayers();game.start();">
+                <button class="ui-button" onclick="game.playersManager.addPlayers();game.start();">
                     Nueva partida
                 </button>
             </div>
@@ -42,7 +41,7 @@
                     <td><button class="board-button" onclick="game.drawSymbol(2,2);"></button></td>
                 </tr>
             </table>
-            <p><button onclick="game.giveUp();">Rendirse</button></p>
+            <p><button class="ui-button" onclick="game.giveUp();">Rendirse</button></p>
         </div>
     </body>
     <script>
