--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
     <head>
         <title>Ta te ti!</title>
+        <link rel="icon" type="image/x-icon" href="/img/icon.svg">
         <script src="./js/game.js"></script>
         <link rel="stylesheet" href="./styles/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1-.0">
     </head>
     <body>
+        <div class="message-box" id="message-box">
+            <p id="message-box-text" class="message-box-text"></p>
+            <button class="ui-button" onclick="game.messageBox.hideMessage();">Cerrar</button>
+        </div>
         <h1 class="header">Ta Te Ti!</h1>
         <div id="menu" class="menu">
             <div class="game-start-menu">
